# solutions

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  public.h  test.sh
2021年10月/: 189_旋转数组.h  278_第一个错误的版本.h  284_窥探迭代器.h  35_搜索插入位置.h  434_字符串中的单词数.h  482_密钥格式化.h  704_二分查找.h  977_有序数组的平方.h
2021年10月04日/: 482_密钥格式化.h
include/: ListNode.hpp  TreeNode.hpp  common.h  detail.hpp  tools.hpp
leetcode/0-1000/0/: 19_删除链表的倒数第 N 个结点.cc  1_两数之和.cc  20_有效的括号.cc  21_合并两个有序链表.cc  34_在排序数组中查找元素的第一个和最后一个位置.cc  35_搜索插入位置.cc  36_有效的数独.cc  3_无重复字符的最长子串.cc  53_最大子数组和.cc  69_x 的平方根 .cc  73_矩阵置零.cc  77_组合.cc  83_删除排序链表中的重复元素.cc  88_合并两个有序数组.cc  95_最长公共子序列.cc
leetcode/0-1000/1/: 116_填充每个节点的下一个右侧节点指针.cc  118_杨辉三角.cc  121_买卖股票的最佳时机.cc  141_环形链表.cc  167_两数之和 II - 输入有序数组.cc  189_轮转数组.cc  191_位1的个数.cc
leetcode/0-1000/2/: 203_移除链表元素.cc  206_反转链表.cc  217_存在重复元素.cc  231_2 的幂.cc  232_用栈实现队列.cc  242_有效的字母异位词.cc  278_第一个错误的版本.cc  283_移动零.cc
leetcode/0-1000/3/: 344_反转字符串.cc  350_两个数组的交集 II.cc  367_有效的完全平方数.cc  374_猜数字大小.cc  383_赎金信.cc  387_字符串中的第一个唯一字符.cc
leetcode/0-1000/4/: 432_全 O(1) 的数据结构.cc  441_排列硬币.cc
leetcode/0-1000/5/: 542_01 矩阵.cc  557_反转字符串中的单词 III.cc  566_重塑矩阵.cc  567_字符串的排列.cc  (+1 more)
leetcode/1000-9999/: 1268_搜索推荐系统.cc  1385_两个数组间的距离值.cc  1539_第 k 个缺失的正整数.cc  2044_统计按位或能得到最大值的子集数目.cc
leetcode/2022/: 704_二分查找.cc
others/: template.cc
scripts/: build.py  build.sh  cmake.sh  functions.sh  init.sh  src_move.py  tools.py
template/: 0_template.cc  1_template.cc
test/: CMakeLists.txt  common.h
test/include/: ListNode.hpp  TreeNode.hpp  common.h  tools.hpp
(+11 files in other folders)
